Reordenando imagenes, agregando carousel eventos

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
       <h2 class="trn"><strong>JARKOL TECHNOLOGIES</strong></h2>
 
       <div>
-        <a href="#about" class="btn-get-started scrollto"><small><strong id="tec">TECHNOLOGY & ENGINEERING
-              SERVICES</strong></small></a>
+        <a href="#about" class="btn-get-started scrollto"><small><strong id="tec">TECHNOLOGY & ENGINEERING SERVICES</strong></small></a>
       </div>
     </div>
 
@@ -139,16 +138,14 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-cogs"></i></div>
               <h4 class="title"><a href="" class="trn">Mission</a></h4>
-              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and
-                Mining industry in the Mexican Market in order to promote and boost competitiveness.</p>
+              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the Mexican Market in order to promote and boost competitiveness.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-eye"></i></div>
               <h4 class="title"><a href="" class="trn">Vision</a></h4>
-              <p class="description trn" id="vision">​To become one of the leading Mexican companies boosting the
-                development of technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
+              <p class="description trn" id="vision">​To become one of the leading Mexican companies boosting the development of technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
             </div>
           </div>
 
@@ -166,12 +163,8 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h2 class="cta-title trn">About Us</h2>
-            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to
-              guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
-            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct
-              experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging
-              with both wireline and while drilling tools and production parameters monitoring, focused on the
-              introduction of new, better and more accesible technologies in the Latin American market.</p>
+            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
+            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and while drilling tools and production parameters monitoring, focused on the introduction of new, better and more accesible technologies in the Latin American market.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle trn" href="#contact">Get in Touch</a>
@@ -189,46 +182,51 @@
     <section class="wow fadeInUp carousel">
       <div class="container">
         <div class="owl-carousel clients-carousel">
-          <img src="img/portfolio/1.jpg" alt="">
           <img src="img/portfolio/2.jpg" alt="">
           <img src="img/portfolio/3.jpg" alt="">
           <img src="img/portfolio/4.jpg" alt="">
           <img src="img/portfolio/5.jpg" alt="">
-          <img src="img/portfolio/8.jpg" alt="">
           <img src="img/portfolio/9.jpg" alt="">
           <img src="img/portfolio/10.jpg" alt="">
           <img src="img/portfolio/11.jpg" alt="">
           <img src="img/portfolio/12.jpg" alt="">
-          <img src="img/portfolio/13.jpg" alt="">
-          <img src="img/portfolio/14.jpg" alt="">
-          <img src="img/portfolio/18.jpg" alt="">
-          <img src="img/portfolio/19.jpg" alt="">
           <img src="img/portfolio/20.jpg" alt="">
           <img src="img/portfolio/21.jpg" alt="">
-          <img src="img/portfolio/22.jpg" alt="">
-          <img src="img/portfolio/23.jpg" alt="">
-          <img src="img/portfolio/24.jpg" alt="">
-          <img src="img/portfolio/25.jpg" alt="">
-          <img src="img/portfolio/28.jpg" alt="">
-          <img src="img/portfolio/29.jpg" alt="">
           <img src="img/portfolio/30.jpg" alt="">
           <img src="img/portfolio/31.jpg" alt="">
           <img src="img/portfolio/32.jpg" alt="">
-          <img src="img/portfolio/33.jpg" alt="">
           <img src="img/portfolio/34.jpg" alt="">
-          <img src="img/portfolio/36.jpg" alt="">
           <img src="img/portfolio/38.jpg" alt="">
           <img src="img/portfolio/39.jpg" alt="">
-          <img src="img/portfolio/40.jpg" alt="">
-          <img src="img/portfolio/41.jpg" alt="">
-          <img src="img/portfolio/42.jpg" alt="">
         </div>
 
       </div>
     </section><!-- #clients -->
 
-
-
+<!--==========================
+      Tools Section
+    ============================-->
+    <section id="clients" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-header">
+          <h2 class="trn">Events</h2>
+        </div>
+      </div>
+    </section>
+            <section class="wow fadeInUp carousel">
+              <div class="container">
+                <div class="owl-carousel clients-carousel">
+                  <img src="./img/events/1.jpg" alt="">
+                  <img src="./img/events/2.jpg" alt="">
+                  <img src="./img/events/3.jpg" alt="">
+                  <img src="./img/events/4.jpg" alt="">
+                  <img src="./img/events/5.jpg" alt="">
+                  <img src="./img/events/6.jpg" alt="">
+                  <img src="./img/events/7.jpg" alt="">
+                </div>
+                </div>
+      </section>
+   
     <!--==========================
       Clients Section
     ============================-->
@@ -237,9 +235,7 @@
         <div class="section-header">
           <h2 class="trn">Clients</h2>
           <h3></h3>
-          <p class="trn">We work with several companies from around the world in the Energy industry on complex
-            matters, focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have
-            been able to get back on track and experience the long lasting impacts of our services.</p>
+          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters, focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to get back on track and experience the long lasting impacts of our services.</p>
         </div>
 
         <div class="owl-carousel clients-carousel">
@@ -300,8 +296,7 @@
                   <li class="small text-uppercase font-italic Italica">
                     <d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">Expert Guidance</strong>
                   </li>
-                  <li class="trn">Over 15 years of technical experience in both onshore and offshore operations in the
-                    Oil and Gas Industry.</li>
+                  <li class="trn">Over 15 years of technical experience in both onshore and offshore operations in the Oil and Gas Industry.</li>
                 </ul>
               </li>
             </ul>
@@ -407,21 +402,17 @@
         </div>
       </section><!-- #portfolio -->
 
-
+      <br>
       <!--==========================
       Call To Action Section
     ============================-->
-      <section class="wow fadeInUp call-to-action parallax"
-        style="background: url('./img/portfolio/7.jpg') center / cover fixed;">
+      <section class="wow fadeInUp call-to-action"
+        style="background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url('./images/jarkol/fondo.jpg') center / cover fixed;">
         <div class="container">
           <div class="row">
             <div class="col-lg-9 text-center text-lg-left">
               <h2 class="cta-title trn">The Cutting Edge</h2>
-              <p class="cta-text trn">We offer a variety of services to all of our clients, customized to fit their
-                specific
-                needs. Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small
-                startup just beginning your business? No matter what your needs are, Jarkol Technologies is here to
-                provide you guidance every step of the way. Take a look below to see what we can do for you.</p>
+              <p class="cta-text trn">We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step of the way. Take a look below to see what we can do for you.</p>
             </div>
           </div>
 
@@ -589,6 +580,10 @@
       <!--==========================
       Contact Section
     ============================-->
+    <br>
+    <br>
+    <br>
+    <br>
       <section id="contact" class="wow fadeInUp">
 
 
@@ -608,8 +603,7 @@
               <div class="container">
                 <div class="section-header">
                   <h2 class="trn">Contact Us</h2>
-                  <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and
-                    explore what we can do for you.</p>
+                  <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and explore what we can do for you.</p>
                 </div>
               </div>
               <div class="form">
