--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
       </div>
     </div>
   </section>
-
   <!--==========================
     Header
   ============================-->
@@ -115,11 +114,11 @@
     </div>
 
     <div id="intro-carousel" class="owl-carousel">
-      <div class="item" style="background-image: url('img/intro-carousel/13.jpg');"></div>
+      <div class="item" style="background-image: url('img/intro-carousel/43.jpg');"></div>
       <div class="item" style="background-image: url('img/intro-carousel/8.jpg');"></div>
       <div class="item" style="background-image: url('img/intro-carousel/5.jpg');"></div>
       <div class="item" style="background-image: url('img/intro-carousel/7.jpg');"></div>
-      <div class="item" style="background-image: url('img/intro-carousel/4.jpg');"></div>
+      <div class="item" style="background-image: url('img/intro-carousel/3.jpg');"></div>
     </div>
 
   </section><!-- #intro -->
@@ -182,7 +181,7 @@
 
           </div>
           <div class="col-lg-6  about-img d-xs-none">
-            <img class="center-block" src="img/portfolio/15.jpg" alt="">
+            <img class="center-block" src="img/intro-carousel/14.jpg" alt="">
           </div>
         </div>
       </div>
@@ -223,12 +222,8 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h2 class="cta-title trn">About Us</h2>
-            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to
-              guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
-            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct
-              experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging
-              with both wireline and while drilling tools and production parameters monitoring, focused on the
-              introduction of new, better and more accesible technologies in the Latin American market.</p>
+            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
+            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and while drilling tools and production parameters monitoring, focused on the introduction of new, better and more accesible technologies in the Latin American market.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle trn" href="#contact">Get in Touch</a>
@@ -247,17 +242,15 @@
           <div class="col-lg-6">
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-cogs"></i></div>
-              <h4 class="title"><a href="" class="trn">Mission</a></h4>
-              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and
-                Mining industry in the Mexican Market in order to promote and boost competitiveness.</p>
+              <h4 class="title"><a href="" class="trn">Our Mission</a></h4>
+              <p class="description trn">Provide and develop technology and high quality services and impact for the oil, geothermal and mining industry in the Mexican market with the purpose of promoting and promoting competitiveness to provide our customers with the best solution to their projects.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-eye"></i></div>
-              <h4 class="title"><a href="" class="trn">Vision</a></h4>
-              <p class="description trn" id="vision">​To become one of the leading Mexican companies boosting the
-                development of technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
+              <h4 class="title"><a href="" class="trn">Our Vision</a></h4>
+              <p class="description trn" id="vision">​To become one of the leading Mexican companies in the development of technology, integral solutions and strategic tools for the energy industry in Mexico and Latin America.</p>
             </div>
           </div>
 
@@ -308,6 +301,14 @@
         <div class="owl-carousel clients-carousel">
           <img src="img/clients/logo_CFE_2.png" alt="">
           <img src="img/clients/pemex-logo.webp" alt="">
+          <img src="img/clients/1.png" alt="">
+          <img src="img/clients/2.png" alt="">
+          <img src="img/clients/3.png" alt="">
+          <img src="img/clients/4.png" alt="">
+          <img src="img/clients/5.png" alt="">
+          <img src="img/clients/6.png" alt="">
+          <img src="img/clients/7.png" alt="">
+          <img src="img/clients/8.png" alt="">
         </div>
 
       </div>
@@ -322,10 +323,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h2 class="cta-title trn">The Cutting Edge</h2>
-            <p class="cta-text trn">We offer a variety of services to all of our clients, customized to fit their
-              specific needs. Are you a large corporation looking for a step-by-step plan of action? Or, are you are a
-              small startup just beginning your business? No matter what your needs are, Jarkol Technologies is here
-              to provide you guidance every step of the way. Take a look below to see what we can do for you.</p>
+            <p class="cta-text trn">We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step of the way. Take a look below to see what we can do for you.</p>
           </div>
         </div>
 
@@ -381,8 +379,8 @@
 
           <div class="col-lg-4 col-md-4">
             <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/41.jpg" class="portfolio-popup">
-                <img src="img/portfolio/41.jpg" alt="">
+              <a href="img/portfolio/39.jpg" class="portfolio-popup">
+                <img src="img/portfolio/39.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
                     <h2 class="wow fadeInUp trn">Technical Consulting</h2>
@@ -605,8 +603,7 @@
             <div class="container">
               <div class="section-header">
                 <h2 class="trn">Contact Us</h2>
-                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and
-                  explore what we can do for you.</p>
+                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and explore what we can do for you.</p>
               </div>
             </div>
             <div class="form">
