logo, servicios y about-us

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 
       <div id="logo" class="pull-left">
         <h1><a href="#body" class="scrollto">
-            <img width="40px" src="img/im03-transparent.png" alt="" title="" />
-            <img width="150px" src="img/im04.png" alt="" title="" />
+            <img width="125px" src="img/im04.png" alt="" title="" /><img width="40px" src="img/im03-transparent.png" alt="" title="" />
           </a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
@@ -138,10 +137,10 @@
         <div class="row">
 
 
-          <div class="col-lg-6 content">
+          <div class="col-sm-12 col-lg-6 content">
             <h4 class="trn ">Experts in horizontal well logging.</h4>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Geothermal</strong>
+              <li><i class="ion-android-checkmark-circle"></i> <span class="trn">Geothermal</span>
                 <ul>
                   <li class="small text-uppercase font-italic Italica">
                     <d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">Comprehensive Approach</strong>
@@ -149,7 +148,7 @@
                   <li class="trn">PTS Memory and Real time.</li>
                 </ul>
               </li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Downhole Monitoring Systems</strong>
+              <li><i class="ion-android-checkmark-circle"></i> <span class="trn">Downhole Monitoring Systems</span>
                 <ul>
                   <li class="small text-uppercase font-italic Italica">
                     <d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">Precision beyond the surface</strong>
@@ -159,8 +158,8 @@
               </li>
             </ul>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Directional Drilling and Logging
-                  Tools</strong>
+              <li><i class="ion-android-checkmark-circle"></i> <span class="trn">Directional Drilling and Logging
+                  Tools</span>
                 <ul>
                   <li class="small text-uppercase font-italic Italica">
                     <d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">The Path to Success</strong>
@@ -168,7 +167,7 @@
                   <li class="trn">Directional drilling services and MWD/LWD tools.</li>
                 </ul>
               </li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Technical Consultancy</strong>
+              <li><i class="ion-android-checkmark-circle"></i> <span class="trn">Technical Consultancy</span>
                 <ul>
                   <li class="small text-uppercase font-italic Italica">
                     <d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">Expert Guidance</strong>
@@ -180,8 +179,8 @@
             </ul>
 
           </div>
-          <div class="col-lg-6  about-img d-xs-none">
-            <img class="center-block" src="img/intro-carousel/14.jpg" alt="">
+          <div class="col-xs-12 col-lg-6 about-img">
+            <img class="center-block" src="img/intro-carousel/14.jpg" style="max-width: 100%" alt="">
           </div>
         </div>
       </div>
@@ -207,7 +206,6 @@
           <img src="img/portfolio/32.jpg" alt="">
           <img src="img/portfolio/34.jpg" alt="">
           <img src="img/portfolio/38.jpg" alt="">
-          <img src="img/portfolio/39.jpg" alt="">
         </div>
 
       </div>
@@ -408,7 +406,7 @@
                 <img src="img/portfolio/1.jpg">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <a href="productos&servicios.pdf" target="_blank">
+                    <a href="docs/JARKOL_2019_SP.pdf" target="_blank">
                       <h2 class="wow fadeInUp trn">Discover</h2>
                     </a>
                   </div>
@@ -416,9 +414,7 @@
               </a>
             </div>
           </div>
-
         </div>
-
       </div>
     </section><!-- #portfolio -->
 
