--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
                   <li class="small text-uppercase font-italic Italica">
                     <d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">Expert Guidance</strong>
                   </li>
-                  <li class="trn">Over 15 years of technical experience in both onshore and offshore operations in the
-                    Oil and Gas Industry.</li>
+                  <li class="trn">Over 15 years of technical experience in both onshore and offshore operations in the Oil and Gas Industry.</li>
                 </ul>
               </li>
             </ul>
@@ -293,9 +292,7 @@
         <div class="section-header">
           <h2 class="trn">Clients</h2>
           <h3></h3>
-          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters,
-            focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to
-            get back on track and experience the long lasting impacts of our services.</p>
+          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters, focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to get back on track and experience the long lasting impacts of our services.</p>
         </div>
 
         <div class="owl-carousel clients-carousel">
