--- a/index.html
+++ b/index.html
@@ -209,7 +209,6 @@
 
       </div>
     </section><!-- #carousel -->
-
     </section><!-- #about -->
     <!--==========================
     Call To Action Section
@@ -240,7 +239,7 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-cogs"></i></div>
               <h4 class="title"><a href="" class="trn">Our Mission</a></h4>
-              <p class="description trn">Provide and develop technology and high quality services and impact for the oil, geothermal and mining industry in the Mexican market with the purpose of promoting and promoting competitiveness to provide our customers with the best solution to their projects.</p>
+              <p class="description trn">Provide, import and develop technology for the oil, geothermal and mining industry in the Mexican market in order to promote and boost competitiveness.</p>
             </div>
           </div>
           <div class="col-lg-6">
