--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
           <li><a href="#about" class="trn">About Us</a></li>
           <li><a href="#portfolio" class="trn" id="prod">Products & Services</a></li>
           <li><a href="#contact" class="trn">Contact</a></li>
-          <li class="menu-has-children d-md-none d-lg-none"><a>Language</a>
-            <ul style="">
+          <li class="menu-has-children d-md-none d-lg-none"><a class="trn">Lenguage</a>
+            <ul>
               <li><a class="lang_selector trn" href="#" onclick="changeLang('en', event)" role="button"> <img src="img/USA.svg"
-                    height="20" alt=""> Inglés</a></li>
+                    height="20" alt=""><a class="trn" id="salt">English</a></a></li>
               <li>
                 <a class="lang_selector trn" href="#" onclick="changeLang('es', event)" role="button"><img src="img/mexico.png"
-                    height="20" alt=""> Español</a></li>
+                    height="20" alt=""><a class="trn" id="salt">Spanish</a></a></li>
             </ul>
           </li>
         </ul>
