Ajustes seccion de vinculos con la comunidad

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and while drilling tools and production parameters monitoring, focused on the introduction of new, better and more accesible technologies in the Latin American market.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle trn" href="docs/JARKOL_2019_SP.pdf">Discover</a>
+            <a class="cta-btn align-middle trn" target="_blank" href="docs/JARKOL_2019_SP.pdf">Discover</a>
           </div>
         </div>
 
@@ -247,7 +247,7 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-eye"></i></div>
               <h4 class="title"><a href="" class="trn">Our Vision</a></h4>
-              <p class="description trn" id="vision">​To become one of the leading Mexican companies in the development of technology, integral solutions and strategic tools for the energy industry in Mexico and Latin America.</p>
+              <p class="description trn" id="vision">​To become one of the leading Mexican companies in the development of technology, integral solutions and strategic tools for the energy industry in México and Latin América.</p>
             </div>
           </div>
 
@@ -583,8 +583,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 text-center text-lg-left">
-          <h2 class="cta-title trn">Community outreach</h2>
-          <p class="cta-text trn">We are an association that cares about the technological development of the country, that's why we become one of the sponsors of the AAAI Student Chapter contributing to more students have knowledge about artificial intelligence and other related fields that are becoming more popular.</p>
+          <h2 class="cta-title trn">Community Outreach</h2>
+          <p class="cta-text trn">We are an association that care about the technological development of the country, that's why we become one of the sponsors of the <strong>AAAI Student Chapter México</strong> contributing to more students have knowledge about artificial intelligence and other related fields that are becoming more popular.</p>
         </div>
         <div class="col-lg-4 text-center text-lg-right">
           <a href="http://aaaimx.com/"><img src="img/aaaimx-transparent.png" width="200" alt=""></a>
@@ -592,10 +592,10 @@
       </div>
       <div class="row">
         <div class="col-lg-4 text-center text-lg-left d-none d-lg-block d-md-block">
-          <a href="https://apoyoalajuventud.org/"><img src="img/fundacion.png" width="250" alt=""></a>
+          <a href="https://apoyoalajuventud.org/"><img src="img/fundacion.png"  width="250" alt=""></a>
         </div>
         <div class="col-lg-8 text-center text-lg-right ">
-          <p class="cta-text trn">We are an association that cares for the wellbeing of the community that will be in charge of leading to a better future in this country, so we have joined forces with the Foundation and Support for Youth that supports young people who are in situation of serious vulnerability and discrimination accompanying them in the planning of their life project.</p>
+          <p class="cta-text trn">We care for the wellbeing of the community that will be in charge of leading to a better future in this country, so we have joined forces with the <strong>Fundación de Apoyo a la Juventud</strong> that supports young people who are in situation of serious vulnerability and discrimination accompanying them in the planning of their life project.</p>
         </div>
         <div class="col-lg-4 text-center text-lg-left d-md-none d-lg-none">
           <a href="https://apoyoalajuventud.org/"><img src="img/fundacion.png" width="250" alt=""></a>
@@ -713,7 +713,7 @@
     <div class="container">
       <div class="copyright">
         &copy; 2019 BY <strong>JARKOL TECHNOLOGIES S.A. DE C.V.</strong><br>
-        <a href="http://aaaimx.com/">Powered by AAAIMX</a>
+        <span class="trn">Powered by</span> <a href="http://aaaimx.com/" target="_blank">@aaaimx</a>
       </div>
     </div>
   </footer><!-- #footer -->
