Fundacion de Apoyo

--- a/index.html
+++ b/index.html
@@ -602,8 +602,8 @@
           <div class="col-lg-8 text-center text-lg-right ">
             <p class="cta-text trn">We care for the wellbeing of the community that will be in charge of leading to a better future in this country, so we have joined forces with the <strong>Fundación de Apoyo a la Juventud</strong> that supports young people who are in situation of serious vulnerability and discrimination accompanying them in the planning of their life project.</p>
           </div>
-          <div class="col-sm-4 col-xs-10 text-center text-lg-left d-md-none d-lg-none fund">
-            <a href="https://apoyoalajuventud.org/"><img src="img/fundacion.jpeg" alt=""></a>
+          <div class="col-sm-12 col-xs-10 text-center text-lg-left d-md-none d-lg-none fund">
+            <a href="https://apoyoalajuventud.org/"><img src="img/fundacion.jpeg" width="250" alt=""></a>
           </div>
           <div class="col-sm-6 text-center text-lg-left d-md-none d-lg-none fund"></div>
         </div>
