Traduccion discover products

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
                     <a href="docs/productos&servicios.pdf" target="_blank">
-                      <h2 class="wow fadeInUp trn">Discover products</h2>
+                      <h2 class="wow fadeInUp trn">Discover Products</h2>
                     </a>
                   </div>
                 </div>
