--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   </li>
                   <li class="trn">PTS Memory and Real time.</li>
                 </ul>
-              </li>
+              </li>/profiles/routes
               <li><i class="ion-android-checkmark-circle"></i> <span class="trn">Downhole Monitoring Systems</span>
                 <ul>
                   <li class="small text-uppercase font-italic Italica">
@@ -638,7 +638,7 @@
             <div class="form">
               <div id="sendmessage" class="trn">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
-              <form action="" method="post" role="form" class="contactForm">
+              <form action="" method="post" role="form" class="contactForm" mailto="sales@jarkol.com">
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
